# dwc-meltingplot-config

./: .gitignore  CLAUDE.md  DWC-DSF-PLUGIN-DEV-GUIDE.md  PLAN.md  README.md  jest.config.js  package-lock.json  package.json  plugin.json  pyproject.toml
.claude/skills/dwc-dsf-plugin-dev/: SKILL.md
.github/workflows/: ci.yml  release.yml
dsf/: config_manager.py  git_utils.py  meltingplot-config-daemon.py
scripts/: build-zip.js  version.js
src/: MeltingplotConfig.vue  index.js
src/__mocks__/: routes.js
src/components/: BackupHistory.vue  ConfigDiff.vue  ConfigStatus.vue
tests/: test_config_manager.py  test_config_manager_methods.py  test_daemon.py  test_daemon_handlers.py  test_daemon_startup.py  test_e2e.py  test_git_utils.py  test_git_utils_extra.py  test_integration.py
tests/frontend/: BackupHistory.test.js  ConfigDiff.test.js  ConfigDiffExtra.test.js  ConfigStatus.test.js  MeltingplotConfig.test.js  setup.js
tests/frontend/integration/: api-contract.test.js  full-mount.test.js  plugin-registration.test.js  plugin-structure.test.js  user-flows.test.js
